separator on mobile issue fix

--- a/src/css/post/style.css
+++ b/src/css/post/style.css
@@ -81,6 +81,8 @@ h1:hover > .header-anchor, h2:hover > .header-anchor, h3:hover > .header-anchor,
 @media (max-width: 800px) {
     main {
         width: calc(100% - 40px);
+        padding-left: 0;
+        padding-right: 0;
     }
 
     main {
